--- a/statistics project 2/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/statistics project 2/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The confidence interval computed in the above cell confirms that the proportion of resumes with black-sounding names get 2% - 6% less callbacks as compared to resumes of white-sounding names.**"
+    "**The confidence interval computed in the above cell confirms that we are 95% confident that the proportion of resumes with black-sounding names get 2% - 6% less callbacks as compared to resumes of white-sounding names.**"
    ]
   },
   {
